--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -80,7 +80,8 @@ li {
     margin: 10px;
 }
 .pikachu-image {
-    background-image: url("../images/background.jpeg"); /* 배경 이미지 경로 설정 */
+    /* background-image: url("../images/background.jpeg"); 배경 이미지 경로 설정 */
+
     width: 80%;
     height: auto;
     /* background-size: cover;
