--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -49,6 +49,55 @@ nav a {
     text-decoration: none;
     color: #333;
 }
+
+li {
+    list-style-type: none;
+}
+
+.full-container {
+    width: 80%;
+    background-color: rgb(113, 208, 251);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.inner-container {
+    width: 80%;
+    display: flex;
+    align-items: flex-end;
+}
+
+.main-box {
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 20%;
+    height: auto;
+}
+
+.btn {
+    margin: 10px;
+}
+
+.pikachu-image {
+    /* background-image: url("../images/background.jpeg"); 배경 이미지 경로 설정 */
+
+    width: 80%;
+    height: auto;
+    /* background-size: cover;
+    background-position: center; */
+}
+
+.dropdown-menu {
+    width: 150px;
+}
+
 .otp-card {
 	text-align: center;
 	background-color: white;
