--- a/src/css/style.css
+++ b/src/css/style.css
@@ -168,10 +168,6 @@ li {
 	cursor: default;
 }
 
-
-
-
-
 .single-chart {
     width: 33%;
     justify-content: space-around ;
@@ -221,3 +217,27 @@ li {
     font-size: 0.5em;
     text-anchor: middle;
   }
+
+#local_canvas {
+	position: absolute;
+	top: 14%;
+	left: 10%;
+	width: 80%;
+	height: 80%;
+}
+
+#p1-score {
+	position: absolute;
+	top: 11%;
+	left: 20%;
+	width: 20%;
+	height: 10%;
+}
+
+#p2-score {
+	position: absolute;
+	top: 11%;
+	left: 80%;
+	width: 20%;
+	height: 10%;
+}
