--- a/src/css/style.css
+++ b/src/css/style.css
@@ -242,3 +242,15 @@ li {
 	width: 20%;
 	height: 10%;
 }
+
+.profile-img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #111;
+  }
+
+#profile-img-box {
+    border: #111 2px solid;
+}
