--- a/src/css/style.css
+++ b/src/css/style.css
@@ -251,6 +251,17 @@ li {
     border: 2px solid #111;
   }
 
+  #profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+#profile-box {
+    display: flex;
+
+    justify-content: space-between;
+}
 #profile-img-box {
     border: #111 2px solid;
 }
