--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,9 @@ a:hover:not(.job) {
     color: #fff;
 }
 
+hr {
+  margin:0;
+}
 header {
     display: flex;
     justify-content: space-between;
@@ -319,11 +322,21 @@ li {
 }
 
 #record-list-box {
+  flex-direction: column;
   height: 200px;
   overflow-y: scroll;
   border: 1px solid #ccc;
 }
-
+#record-item {
+  display: flex;
+  justify-content: flex-start;
+  height:50px;
+  align-items: center;
+}
+#record-item-text {
+  padding-left: 10px;
+  padding-right: 10px;
+}
 #record-circle-box {
   display: flex;
   flex-direction: column;
@@ -340,4 +353,9 @@ li {
   border-radius: 50%;
   /* border: 10px solid #ccc; */
   background-color: #d9d9d9;
+}
+
+.column-line{
+  border-left: 1px solid #ccc;
+  height: 100%;
 }
