--- a/src/css/style.css
+++ b/src/css/style.css
@@ -263,8 +263,13 @@ li {
 #saveButtonBox {
   display: flex;
   flex-direction: row-reverse;
+  margin-top: 10px;
+  align-items: center;
 }
-
+#saveMessage {
+  color:#5383e8;
+  margin-right: 20px;
+}
 .content-container {
   display: flex;
   flex-direction: column;
