--- a/src/css/style.css
+++ b/src/css/style.css
@@ -80,7 +80,7 @@ li {
     justify-content: space-between;
     align-items: center;
     justify-content: center;
-    
+
 }
 
 .btn-box {
@@ -109,7 +109,7 @@ li {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
 }
 .otp-card {
     width: 80%;
@@ -168,46 +168,46 @@ li {
     width: 60%;
     justify-content: space-around ;
   }
-  
+
   .circular-chart {
     display: block;
     margin: 10px auto;
     max-width: 80%;
     max-height: 250px;
   }
-  
+
   .circle-bg {
     fill: none;
     /* stroke: #eee; */
     stroke: #e84057;
     stroke-width: 3.8;
   }
-  
+
   .circle {
     fill: none;
     stroke-width: 3.8;
     /* stroke-linecap: square; */
     animation: progress 1s ease-out forwards;
   }
-  
+
   @keyframes progress {
     0% {
       stroke-dasharray: 0 100;
     }
   }
-  
+
   .circular-chart.orange .circle {
     stroke: #ff9f00;
   }
-  
+
   .circular-chart.green .circle {
     stroke: #4CC790;
   }
-  
+
   .circular-chart.blue .circle {
     stroke: #5383e8;
   }
-  
+
   .percentage {
     fill: #666;
     font-family: sans-serif;
@@ -363,4 +363,25 @@ li {
 .column-line{
   border-left: 1px solid #ccc;
   height: 100%;
+}
+
+#modalContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+#modal {
+  padding: 20px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
