--- a/src/css/style.css
+++ b/src/css/style.css
@@ -385,3 +385,15 @@ li {
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+#modalClose {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#modalClose:hover {
+  color: black;
+}
