--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,11 +55,6 @@ li {
     list-style-type: none;
 }
 
-.logout {
-    color: #333;
-}
-
-
 .full-container {
     width: 80%;
     min-width: 884px;
@@ -100,7 +95,7 @@ li {
 }
 
 .pikachu-image {
-    width: 80%;
+    width: 75%;
     height: auto;
 }
 
@@ -223,6 +218,13 @@ li {
 	height: 80%;
 }
 
+#multi_canvas {
+	position: absolute;
+	top: 14%;
+	left: 10%;
+	width: 80%;
+	height: 80%;
+}
 
 #p1-score {
 	position: absolute;
@@ -338,9 +340,31 @@ li {
   height:50px;
   align-items: center;
 }
-#record-item-text {
+#record-item-name {
+  width: 190px;
   padding-left: 10px;
   padding-right: 10px;
+}
+#record-item-time {
+  width: 140px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+#record-item-score {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+#record-item-lose {
+  min-width: 6px;
+  width: 6px;
+  background-color: #e84057;
+  align-self: stretch;
+}
+#record-item-win {
+  min-width: 6px;
+  width: 6px;
+  background-color: #5383e8;
+  align-self: stretch;
 }
 #record-circle-box {
   display: flex;
@@ -396,4 +420,112 @@ li {
 
 #modalClose:hover {
   color: black;
+}
+
+#searchBox {
+    width:90%;
+    min-width:600px;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+}
+
+#searchButtonLogo {
+  width: 30px;
+  height: 30px;
+}
+
+#searchInputBox {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  /* width: 600px; */
+}
+
+
+#searchInput {
+  /* margin-left: 20px; */
+  width:400px;
+  border: 1px solid #ccc;
+  outline:none;
+}
+#searchInput:focus {
+  border: 2px solid #333;
+}
+
+#searchResultBox {
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  height: 300px;
+  overflow-y: scroll;
+  border: 1px solid #ccc;
+  background-color: #fff;
+}
+#searchResultItem {
+  display: flex;
+  justify-content: space-between;
+  height:65px;
+  align-items: center;
+}
+
+#searchResultItemIntraId {
+  justify-self: flex-start;
+  align-self: center;
+  min-width: 350px;
+  margin-left: 1rem;
+}
+
+#isLoginTrueCircle {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #4CC790;
+  margin-right: 5px;
+}
+
+#isLoginFalseCircle {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: transparent;
+  margin-right: 5px;
+}
+
+#searchResultP {
+  width:85.81px;
+  background-color: #4CC790;
+  border-color: #4CC790;
+}
+
+#searchButton{
+  border:none;
+  background-color: #fff;
+}
+
+#searchButtonIcon{
+  width: 30px;
+  height: 30px;
+}
+
+#friendListBox {
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  height: 300px;
+  overflow-y: scroll;
+  border: 1px solid #ccc;
+  background-color: #fff;
+}
+
+#friendBox {
+  width:90%;
+  min-width:600px;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+}
+
+#friendItem {
+  display: flex;
+  justify-content: space-between;
+  height:65px;
+  align-items: center;
 }
